# explorify-travel-planner

./: Cargo.toml
src/: constants.rs  function.rs  main.rs  utils.rs
src/api_requests/: mod.rs  site_seen.rs
src/api_requests/flights/: amadeus.rs  mod.rs
src/api_requests/hotels/: amadeus.rs  mod.rs
src/api_requests/trains/: mod.rs  rapidapi.rs
