[package]
name = "travel-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
gemini-client-api = "5.7.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
