[package]
name = "travel-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
gemini-client-api = "6.3.1"
reqwest = { version = "0.13", features = ["json", "form", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
